# IotDeploymentGenerator

./: CONTIRBUTING.md  LICENSE  buildAndDeployTest.ps1  changelog.md  readme.md  setup.cfg  setup.py  syntax.sample  tox.ini
.github/workflows/: test.yml
IDG/: __init__.py  module.py  routeSettings.py
IDG/exceptions/: DotInNameException.py  IDGException.py  __init__.py
samples/: .gitignore
samples/1_SimpleDeployment/: expected_output.json  main.py  readme.md
src/IDG/: deployment.py  jsonObject.py  module.py  routeSettings.py  test.py
src/IDG/tests/: __init__.py  module_should.py
tests/: __init__.py  module_should.py  routeSettings_should.py
