[metadata]
name = IoT Deployment Generator
version = 0.0.11
author = Shoter
author_email = 
description = Library used to create Azure IoT Edge deployment templates with python code 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shoter/IotDeploymentGenerator
project_urls =
    Bug Tracker = https://github.com/shoter/IotDeploymentGenerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = IDG